Add possibility to have several internal HVDCs, add intermediate object Pole
Signed-off-by: Antoine LIMOUZIN <antoine.limouzin@rte-france.com>