@@ -11,6 +11,7 @@ import com.powsybl.openrao.data.crac.api.parameters.CracCreationParameters;
 import com.powsybl.openrao.data.crac.api.parameters.JsonCracCreationParameters;
 import com.powsybl.openrao.virtualhubs.HvdcConverter;
 import com.powsybl.openrao.virtualhubs.HvdcLine;
+import com.powsybl.openrao.virtualhubs.HvdcPole;
 import com.powsybl.openrao.virtualhubs.InternalHvdc;
 import org.assertj.core.api.Assertions;
 import org.junit.jupiter.api.Test;
@@ -31,15 +32,23 @@ import static org.junit.jupiter.api.Assertions.assertThrows;
  * @author Roxane Chen {@literal <roxane.chen at rte-france.com>}
  */
 class JsonFbConstraintCracCreationParametersTest {
+    private static final String POLE_ID = "EIC_OF_POLE";
+    private static final String HVDC_EIC = "EIC_OF_HVDC";
 
     private static FbConstraintCracCreationParameters getFbConstraintCracCreationParameters() {
         final FbConstraintCracCreationParameters exportedFbConstraintParameters = new FbConstraintCracCreationParameters();
         exportedFbConstraintParameters.setTimestamp(OffsetDateTime.parse("2025-01-10T05:00:00Z"));
         exportedFbConstraintParameters.setIcsCostUp(30.0);
         exportedFbConstraintParameters.setIcsCostDown(15.0);
-        final InternalHvdc internalHvdc1 = new InternalHvdc(List.of(new HvdcConverter("node 1A", "station A"), new HvdcConverter("node 1B", "station B")), List.of(new HvdcLine("node 1A", "node 1B")));
-        final InternalHvdc internalHvdc2 = new InternalHvdc(List.of(new HvdcConverter("node 2A", "station A"), new HvdcConverter("node 2B", "station B")), List.of(new HvdcLine("node 2A", "node 2B")));
-        exportedFbConstraintParameters.setInternalHvdcs(List.of(internalHvdc1, internalHvdc2));
+
+        final HvdcPole pole1 = new HvdcPole(POLE_ID, List.of(new HvdcConverter("node 1A", "station A"),
+                                                             new HvdcConverter("node 1B", "station B")),
+                                            List.of(new HvdcLine("node 1A", "node 1B")));
+        final HvdcPole pole2 = new HvdcPole(POLE_ID, List.of(new HvdcConverter("node 2A", "station A"),
+                                                             new HvdcConverter("node 2B", "station B")),
+                                            List.of(new HvdcLine("node 2A", "node 2B")));
+
+        exportedFbConstraintParameters.setInternalHvdcs(List.of(new InternalHvdc(HVDC_EIC, List.of(pole1, pole2))));
         return exportedFbConstraintParameters;
     }
 
@@ -63,31 +72,35 @@ class JsonFbConstraintCracCreationParametersTest {
         Assertions.assertThat(fbConstraintCracCreationParameters.getIcsCostUp()).isEqualTo(30.0);
         Assertions.assertThat(fbConstraintCracCreationParameters.getIcsCostDown()).isEqualTo(15.0);
 
-        Assertions.assertThat(fbConstraintCracCreationParameters.getInternalHvdcs()).hasSize(2);
-        final InternalHvdc extractedInternalHvdc1 = fbConstraintCracCreationParameters.getInternalHvdcs().get(0);
-        final InternalHvdc extractedInternalHvdc2 = fbConstraintCracCreationParameters.getInternalHvdcs().get(1);
+        Assertions.assertThat(fbConstraintCracCreationParameters.getInternalHvdcs()).hasSize(1);
 
-        Assertions.assertThat(extractedInternalHvdc1.converters()).hasSize(2);
-        Assertions.assertThat(extractedInternalHvdc1.converters().get(0))
+        final List<HvdcPole> poles = fbConstraintCracCreationParameters.getInternalHvdcs().getFirst().poles();
+        Assertions.assertThat(poles).hasSize(2);
+
+        final HvdcPole pole1 = poles.getFirst();
+        final HvdcPole pole2 = poles.getLast();
+
+        Assertions.assertThat(pole1.converters()).hasSize(2);
+        Assertions.assertThat(pole1.converters().get(0))
             .hasFieldOrPropertyWithValue("node", "node 1A")
             .hasFieldOrPropertyWithValue("station", "station A");
-        Assertions.assertThat(extractedInternalHvdc1.converters().get(1))
+        Assertions.assertThat(pole1.converters().get(1))
             .hasFieldOrPropertyWithValue("node", "node 1B")
             .hasFieldOrPropertyWithValue("station", "station B");
-        Assertions.assertThat(extractedInternalHvdc1.lines()).hasSize(1);
-        Assertions.assertThat(extractedInternalHvdc1.lines().getFirst())
+        Assertions.assertThat(pole1.lines()).hasSize(1);
+        Assertions.assertThat(pole1.lines().getFirst())
             .hasFieldOrPropertyWithValue("from", "node 1A")
             .hasFieldOrPropertyWithValue("to", "node 1B");
 
-        Assertions.assertThat(extractedInternalHvdc2.converters()).hasSize(2);
-        Assertions.assertThat(extractedInternalHvdc2.converters().get(0))
+        Assertions.assertThat(pole2.converters()).hasSize(2);
+        Assertions.assertThat(pole2.converters().get(0))
             .hasFieldOrPropertyWithValue("node", "node 2A")
             .hasFieldOrPropertyWithValue("station", "station A");
-        Assertions.assertThat(extractedInternalHvdc2.converters().get(1))
+        Assertions.assertThat(pole2.converters().get(1))
             .hasFieldOrPropertyWithValue("node", "node 2B")
             .hasFieldOrPropertyWithValue("station", "station B");
-        Assertions.assertThat(extractedInternalHvdc2.lines()).hasSize(1);
-        Assertions.assertThat(extractedInternalHvdc2.lines().getFirst())
+        Assertions.assertThat(pole2.lines()).hasSize(1);
+        Assertions.assertThat(pole2.lines().getFirst())
             .hasFieldOrPropertyWithValue("from", "node 2A")
             .hasFieldOrPropertyWithValue("to", "node 2B");
 
@@ -103,44 +116,49 @@ class JsonFbConstraintCracCreationParametersTest {
         final ByteArrayOutputStream os = new ByteArrayOutputStream();
         JsonCracCreationParameters.write(exportedParameters, os);
 
-        Assertions.assertThat(os.toString().replaceAll("\r\n", "\n")).isEqualTo("""
-            {
-              "crac-factory" : "CracImplFactory",
-              "default-monitored-line-side" : "monitor-lines-on-both-sides",
-              "ra-usage-limits-per-instant" : [ ],
-              "extensions" : {
-                "FbConstraintCracCreatorParameters" : {
-                  "timestamp" : "2025-01-10T05:00:00Z",
-                  "ics-cost-up" : 30.0,
-                  "ics-cost-down" : 15.0,
-                  "internal-hvdcs" : [ {
-                    "converters" : [ {
-                      "node" : "node 1A",
-                      "station" : "station A"
-                    }, {
-                      "node" : "node 1B",
-                      "station" : "station B"
-                    } ],
-                    "lines" : [ {
-                      "from" : "node 1A",
-                      "to" : "node 1B"
-                    } ]
-                  }, {
-                    "converters" : [ {
-                      "node" : "node 2A",
-                      "station" : "station A"
-                    }, {
-                      "node" : "node 2B",
-                      "station" : "station B"
-                    } ],
-                    "lines" : [ {
-                      "from" : "node 2A",
-                      "to" : "node 2B"
-                    } ]
-                  } ]
-                }
-              }
-            }""");
+        Assertions.assertThat(os.toString().replace("\r\n", "\n")).isEqualTo("""
+                                                                                    {
+                                                                                      "crac-factory" : "CracImplFactory",
+                                                                                      "default-monitored-line-side" : "monitor-lines-on-both-sides",
+                                                                                      "ra-usage-limits-per-instant" : [ ],
+                                                                                      "extensions" : {
+                                                                                        "FbConstraintCracCreatorParameters" : {
+                                                                                          "timestamp" : "2025-01-10T05:00:00Z",
+                                                                                          "ics-cost-up" : 30.0,
+                                                                                          "ics-cost-down" : 15.0,
+                                                                                          "internal-hvdcs" : [ {
+                                                                                            "eic" : "EIC_OF_HVDC",
+                                                                                            "poles" : [ {
+                                                                                              "id" : "EIC_OF_POLE",
+                                                                                              "converters" : [ {
+                                                                                                "node" : "node 1A",
+                                                                                                "station" : "station A"
+                                                                                              }, {
+                                                                                                "node" : "node 1B",
+                                                                                                "station" : "station B"
+                                                                                              } ],
+                                                                                              "lines" : [ {
+                                                                                                "from" : "node 1A",
+                                                                                                "to" : "node 1B"
+                                                                                              } ]
+                                                                                            }, {
+                                                                                              "id" : "EIC_OF_POLE",
+                                                                                              "converters" : [ {
+                                                                                                "node" : "node 2A",
+                                                                                                "station" : "station A"
+                                                                                              }, {
+                                                                                                "node" : "node 2B",
+                                                                                                "station" : "station B"
+                                                                                              } ],
+                                                                                              "lines" : [ {
+                                                                                                "from" : "node 2A",
+                                                                                                "to" : "node 2B"
+                                                                                              } ]
+                                                                                            } ]
+                                                                                          } ]
+                                                                                        }
+                                                                                      }
+                                                                                    }""");
     }
 
     @Test
